# xgreeter

./: Cargo.toml  README.md  flake.nix  greeter.example.toml  xgreeter.example.toml
nix/: hm-module.nix  nixos-module.nix  package.nix
src/: app.rs  ascii_animation.rs  config.rs  greetd.rs  logs.rs  main.rs  theme.rs  tunnel.rs  ui.rs
